# Work-Distribution-System

./: .editorconfig  CMakeLists.txt  README.md
MasterController/: AcceptorServer.cpp  CMakeLists.txt  Master.cpp  Master.h  NodeAcceptorServer.cpp  TcpService.cpp  WorkerNode.cpp  tcp_connection.cpp
Worker/: CMakeLists.txt  Worker.cpp  Worker.h
WorkerController/: CMakeLists.txt  WorkerController.cpp  WorkerController.h
common/: WorkerState.cpp
common/TcpServer/: AcceptorServer.cpp  ServerException.cpp  TcpClient.cpp  TcpService.cpp
